# Kokoro-Vietnamese

./: .gitignore  README.md  TRAINING.md  improve_phoneme.md  pyproject.toml
StyleTTS2/: README.md  kokoro_tb_utils.py  losses.py  pretrained_utils.py  train_finetune.py  train_finetune_accelerate.py  train_first.py  train_second.py  utils.py
StyleTTS2/Configs/: config_ft.yml
StyleTTS2/Modules/diffusion/: modules.py  sampler.py
StyleTTS2/Utils/JDC/: model.py
StyleTTS2/Utils/PLBERT/: config.yml  util.py
configs/: config_vietnamese_100h_multispeaker_modal_e10_stage2.yml  config_vietnamese_100h_multispeaker_stage1.yml  config_vietnamese_100h_multispeaker_stage2.yml  config_vietnamese_30h_multispeaker_stage1.yml  config_vietnamese_30h_multispeaker_stage2.yml  config_vietnamese_30h_stage1.yml  config_vietnamese_30h_stage2.yml  config_vietnamese_larvoice_multispeaker_stage1.yml  config_vietnamese_larvoice_multispeaker_stage2.yml
kokoro/: README.md
kokoro/kokoro/: __init__.py  custom_stft.py  istftnet.py  model.py  pipeline.py
scripts/: audit_vietnamese_frontend.py  extract_voicepack.py  gradio_vietnamese_checkpoint.py  modal_vietnamese_100h_train.py  modal_vietnamese_larvoice_train.py  prepare_vietnamese_dataset.py
src/kokoro_vietnamese/: __init__.py  cli.py  core.py  export_onnx.py  gradio_app.py  onnx_cli.py  onnx_utils.py
src/kokoro_vietnamese/_kokoro/: __init__.py  modules.py
tests/: test_extract_voicepack_multispeaker.py  test_gradio_vietnamese_checkpoint.py  test_inference.py  test_modal_vietnamese_100h_train.py  test_prepare_vietnamese_dataset.py  test_vietnamese_frontend.py  test_vietnamese_multispeaker_training.py
training/: kokoro_symbols.py
