[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro-vietnamese"
version = "0.1.0"
description = "Vietnamese Kokoro TTS package with inference and training utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "iamdinhthuan" }]
dependencies = [
    "attrs",
    "gradio",
    "huggingface_hub",
    "loguru",
    "numpy",
    "packaging",
    "soundfile",
    "torch",
    "transformers>=4.48,<5",
    "vig2p>=0.1.0",
]

[project.optional-dependencies]
training = [
    "accelerate",
    "einops",
    "einops-exts",
    "librosa",
    "matplotlib",
    "misaki[en]>=0.9.4",
    "modal",
    "monotonic-align @ git+https://github.com/resemble-ai/monotonic_align.git",
    "munch",
    "nltk",
    "pydub",
    "pyyaml",
    "tensorboard",
    "torchaudio",
    "tqdm",
]

[project.scripts]
kokoro-vietnamese = "kokoro_vietnamese.cli:main"
kokoro-vietnamese-gradio = "kokoro_vietnamese.gradio_app:main"

[project.urls]
Homepage = "https://github.com/iamdinhthuan/Kokoro-Vietnamese"
Repository = "https://github.com/iamdinhthuan/Kokoro-Vietnamese"
Model = "https://huggingface.co/contextboxai/Kokoro-Vietnamese"

[tool.hatch.build.targets.wheel]
packages = ["src/kokoro_vietnamese"]

[tool.hatch.metadata]
allow-direct-references = true
